# speedtest-z

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.ja.md  README.md  config.ini-sample  logging.ini  pyproject.toml  speedtest-z_templates.yaml
.github/ISSUE_TEMPLATE/: speedtest-result.yml
.github/workflows/: ci.yml  release.yml
deploy/: SeleniumCleaner.cron  speedtest-z.service  speedtest-z.timer
speedtest_z/: __init__.py  __main__.py  main.py
tests/: conftest.py  test_cli.py  test_config.py  test_init.py  test_throttle.py  test_zabbix.py
